# PCGame_Controller

./: .mxproject  CMakeLists.txt  LICENSE  Makefile  README.md  STM32F413XX_FLASH.ld  controller.ioc  formatter.sh
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: dma.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
include/: encoder.hpp  keyboard.hpp  keycode_defs.hpp  led.hpp  switch.hpp  usbd_hid.h
src/: clock.cpp  encoder.cpp  keyboard.cpp  led.cpp  main.cpp  switch.cpp  usbd_hid.c
